fix: resolve auth input white-on-white contrast issue for apple review

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,17 @@
     }
 }
 
+/* Fix iOS and Safari autofill contrast to match the dark SameVibe auth inputs */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px hsl(260, 40%, 15%) inset !important;
+    -webkit-text-fill-color: white !important;
+    caret-color: white !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 ::-webkit-scrollbar {
     width: 6px;
     height: 6px;
